# polytope_barcoding

./: README.md  pyproject.toml
examples/: barcoding_with_gmm.py  certainty_shell_error_sweep.py
src/polytope_barcoding/: __init__.py  barcoding.py  binarization.py  core.py
src/polytope_barcoding/post_barcoding_analysis/: hamming_error_inference.py
src/polytope_barcoding/utils/: manual_annotation_tools.py  visualisation_tools.py
